--- a/webui/templates/base.html
+++ b/webui/templates/base.html
@@ -1,1 +1,79 @@
-<h3>Hello world!!</h3>
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>Hello, docker!</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <style>
+        /* Show it is fixed to the top */
+        body {
+        min-height: 75rem;
+        padding-top: 4.5rem;
+        }
+    </style>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="#">Docker-Web-UI</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Network</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Images</a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Running images</a>
+            </li>
+          </ul>
+          <form class="form-inline mt-2 mt-md-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
+
+<div class="container">
+    <h4 align='center'>Networks</h4>
+    <table class="table">
+    <thead class="thead-dark">
+    <tr>
+    <th scope="col">network id</th>
+    <th scope="col">name</th>
+    <th scope="col">driver</th>
+    <th scope="col">scope</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for net in nets %}
+    <tr>
+    <td>{{ net.id }}</td>
+    <td><a href="/etc/{{net.name}}">{{ net.name }}</a></td>
+    <td>{{ net.driver }}</td>
+    <td>{{ net.scope }}</td>
+    </tr>
+    {% endfor %}
+    </tbody>
+    </table>
+<div>
+<button type="button" class="btn btn-success">Create network</button>
+</div>
+</div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+  </body>
