add new UI and routes

--- a/webui/templates/dashboard.html
+++ b/webui/templates/dashboard.html
@@ -53,39 +53,7 @@ Hello <a href="https://www.docker.com/" class="alert-link">Docker</a>!
 </div>      
 <!-- end notify -->
 <div class="container">
-    <h4 align='center'>Networks</h4>
-    <table class="table">
-    <thead class="thead-dark">
-    <tr>
-    <th scope="col">network id</th>
-    <th scope="col">name</th>
-    <th scope="col">driver</th>
-    <th scope="col">scope</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for net in nets %}
-    <tr>
-    <td>{{ net.id }}</td>
-    <td><a href="#">{{ net.name }}</a></td>
-    <td>{{ net.driver }}</td>
-    <td>{{ net.scope }}</td>
-    </tr>
-    {% endfor %}
-    </tbody>
-    </table>
-<div>
-        <p>
-                <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                  Create Network
-                </a>
-              </p>
-              <div class="collapse" id="collapseExample">
-                <div class="card card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                </div>
-              </div>
-</div>
+  <h2>Hello Docker!!!</h2>
 </div>
 
     <!-- Optional JavaScript -->
