--- a/webui/templates/networks.html
+++ b/webui/templates/networks.html
@@ -1,57 +1,5 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <title>Hello, docker!</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <style>
-        /* Show it is fixed to the top */
-        body {
-        min-height: 75rem;
-        padding-top: 4.5rem;
-        }
-    </style>
-  </head>
-  <body>
-      
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <div class="container">
-        <a class="navbar-brand" href="#">DockerWebUI</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/networks">Network</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Images</a>
-              </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Running images</a>
-            </li>
-          </ul>
-          <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-        </div>
-      </nav>
-<!-- Notify block -->
-<div class="container alert alert-warning" role="alert">
-<img src="static/images/docker.png" width="15%" height="15%"/>
-Hello <a href="https://www.docker.com/" class="alert-link">Docker</a>!
-</div>      
-<!-- end notify -->
+{% extends "base.html" %}
+{% block content %}
 <div class="container">
     <h4 align='center'>Networks</h4>
     <table class="table">
@@ -87,10 +35,4 @@ Hello <a href="https://www.docker.com/" class="alert-link">Docker</a>!
               </div>
 </div>
 </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-  </body>
+{% endblock %}
