--- a/webui/templates/images.html
+++ b/webui/templates/images.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-  <h2>Running containers</h2>
+  <h2>Images</h2>
 </div>
 {% endblock %}
