--- a/webui/templates/base.html
+++ b/webui/templates/base.html
@@ -55,6 +55,9 @@
                 <a class="nav-link" href="/images">Images</a>
               </li>
             <li class="nav-item">
+                <a class="nav-link" href="/containers">Containers</a>
+              </li>
+            <li class="nav-item">
               <a class="nav-link disabled" href="#">Running images</a>
             </li>
           </ul>
@@ -68,6 +71,9 @@
 <!-- Notify block -->
 
 <div class="container alert alert-warning" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
     <div class="row">
         <div class="col">
             <img src="static/images/docker.png" width="40%" height="100%"/>
