--- a/webui/templates/base.html
+++ b/webui/templates/base.html
@@ -55,7 +55,7 @@
               <a class="nav-link" href="/images">Images</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/containers">Dockerfiles</a>
+              <a class="nav-link" href="/dockerfile">Dockerfiles</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/containers">Builds</a>
