--- a/webui/templates/base.html
+++ b/webui/templates/base.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         /* Show it is fixed to the top */
         body {
@@ -67,20 +68,19 @@
               <a class="nav-link disabled" href="#">Monitoring</a>
             </li>
           </ul>
-          <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
         </div>
         </div>
       </nav>
 
 <div class="container">
-  <div class="jumbotron">
-      <h1 class="display-5">I'am DockerWebUI, and you?</h1>
-      <p><img src="static/images/docker.png" width="20%" height="100%"/></p>
-      <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+{% for msg in get_flashed_messages() %}
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+    {{msg}}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
+{% endfor %}
 </div>
 
 <div class="container">
