--- a/webui/templates/dockerfile.html
+++ b/webui/templates/dockerfile.html
@@ -6,4 +6,11 @@
         <textarea placeholder="{{ plh }}" class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
     </div>
 </div>
+<form action="/upload" enctype=multipart/form-data method="POST">
+        <div class="form-group">
+          <label for="exampleFormControlFile1">Example file input</label>
+          <input name='file' type="file" class="form-control-file" id="exampleFormControlFile1">
+          <input type="submit">
+        </div>
+</form>
 {% endblock %}
