--- a/webui/templates/base.html
+++ b/webui/templates/base.html
@@ -67,15 +67,23 @@
             <li class="nav-item">
               <a class="nav-link disabled" href="#">Monitoring</a>
             </li>
+            {% if user %}
+            <li class="nav-item">
+              <a class="nav-link" href="/"><i class="fa fa-user-circle-o" aria-hidden="true"></i>&nbsp;{{user}}</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/signout"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
+            </li>
+            {% endif %}
           </ul>
         </div>
         </div>
       </nav>
 
 <div class="container">
-{% for msg in get_flashed_messages() %}
-<div class="alert alert-success alert-dismissible fade show" role="alert">
-    {{msg}}
+{% for category, msg in get_flashed_messages(with_categories=true) %}
+<div class="alert alert-{{category}} alert-dismissible fade show" role="alert">
+    {{ msg | safe }}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
