--- a/webui/templates/images.html
+++ b/webui/templates/images.html
@@ -5,25 +5,17 @@
     <table class="table">
             <thead class="thead-dark">
               <tr>
-                <th scope="col">CONTAINER ID</th>
-                <th scope="col">IMAGE</th>
-                <th scope="col">COMMAND</th>
-                <th scope="col">CREATED</th>
-                <th scope="col">STATUS</th>
-                <th scope="col">PORTS</th>
-                <th scope="col">NAMES</th>
+                <th scope="col">short id</th>
+                <th scope="col">tags</th>
+                <th scope="col">collection</th>
               </tr>
             </thead>
             <tbody>
-                {% for line in ps %}
+              {% for img in images %}
               <tr>
-                <td>{{ line.id }}</td>
-                <td>{{ line.image }}</td>
-                <td>{{ line.command }}</td>
-                <td>{{ line.created }}</td>
-                <td>{{ line.status }}</td>
-                <td>{{ line.port }}</td>
-                <td>{{ line.names }}</td>
+                <td>{{ img.short_id }}</td>
+                <td>{{ img.tags }}</td>
+                <td>{{ img.collection }}</td>
               </tr>
             {% endfor %}
             </tbody>
