--- a/webui/templates/base.html
+++ b/webui/templates/base.html
@@ -47,7 +47,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/">Dashboard <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/networks">Network</a>
@@ -70,12 +70,17 @@
           </ul>
           <ul class="navbar-nav mr-auto float-right">
               {% if user %}
-              <li class="nav-item">
-                <a class="nav-link" href="/"><i class="fa fa-user-circle-o" aria-hidden="true"></i>&nbsp;{{user}}</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/signout"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
-              </li>
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fa fa-user-circle-o" aria-hidden="true"></i>&nbsp;{{user}}
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#"><i class="fa fa-cogs" aria-hidden="true"></i>&nbsp;Preferences</a>
+                    <a class="dropdown-item" href="/token"><i class="fa fa-user-secret" aria-hidden="true"></i>&nbsp;Token</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/signout"><i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;SignOut</a>
+                  </div>
+                </li>
               {% endif %}
           </ul>
         </div>
