--- a/webui/templates/images.html
+++ b/webui/templates/images.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-    <h4 align='center'>Running images</h4>
-    <table class="table">
+    <h4 align='center'>All images</h4>
+    <table class="table table-striped">
             <thead class="thead-dark">
               <tr>
                 <th scope="col">action</th>
