--- a/webui/templates/base.html
+++ b/webui/templates/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Hello, docker!</title>
+    <title>DockerWebUI</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -40,7 +40,7 @@
       
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container">
-        <a class="navbar-brand" href="#">DockerWebUI</a>
+        <a class="navbar-brand" href="#"><img width="12%" height="12%" src="https://zalinux.ru/wp-content/uploads/2017/04/docker.png"/>&nbsp;DockerWebUI</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -58,18 +58,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/dockerfile">Dockerfiles</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/containers">Builds</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/containers">Graphics</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Monitoring</a>
-            </li>
           </ul>
-          <ul class="navbar-nav mr-auto float-right">
-              {% if user %}
+          {% if user %}
+          <ul class="navbar-nav justify-content-end">
               <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fa fa-user-circle-o" aria-hidden="true"></i>&nbsp;{{user}}
@@ -81,8 +72,8 @@
                     <a class="dropdown-item" href="/signout"><i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;SignOut</a>
                   </div>
                 </li>
-              {% endif %}
           </ul>
+          {% endif %}
         </div>
         </div>
       </nav>
@@ -98,9 +89,7 @@
 {% endfor %}
 </div>
 
-<div class="container">
 {% block content %}{% endblock %}
-</div>
 
 <footer class="footer">
     <div class="container">
