--- a/webui/templates/dashboard.html
+++ b/webui/templates/dashboard.html
@@ -6,10 +6,14 @@
     <div class="jumbotron">
         <h1 class="display-5">Yet another Docker Web UI</h1>
         <p><img src="static/images/docker.png" width="20%" height="100%"/></p>
-        <p><a class="btn btn-lg btn-primary" href="/auth" role="button">Sign up today</a></p>
+        <p><a class="btn btn-lg btn-primary" href="/auth" role="button">Log in now</a></p>
     </div>
 </div>
 {% endif %}
+
+<div class="container">
+    <code>Running: {{ status['count'] }} app</code>
+</div>
 
 <div class="container">
     <h4 align='center'>Running containers</h4>
@@ -46,7 +50,10 @@
             <tbody>
               {% for c in containers %}
               <tr>
-                <td><a href="/kill/{{ c.short_id }}"><i class="fa fa-power-off" aria-hidden="true"></i></a></td>
+                <td>
+                  <a href="/kill/{{ c.short_id }}"><i class="fa fa-power-off" aria-hidden="true"></i></a>
+                  <a target="_blank" href="http://{{ c.attrs['NetworkSettings']['Ports']['80/tcp'][0]['HostIp'] }}:{{ c.attrs['NetworkSettings']['Ports']['80/tcp'][0]['HostPort'] }}">web</a>
+                </td>
                 <td>{{ c.short_id }}</td>
                 <td>{{ c.image }}</td>
                 <td>{{ c.attrs['NetworkSettings']['IPAddress'] }}</td>
