--- a/webui/templates/dockerfile.html
+++ b/webui/templates/dockerfile.html
@@ -1,17 +1,58 @@
 {% extends "base.html" %}
 {% block content %}
+<br/>
 <div class="container">
-    <div class="form-group">
-        <label for="exampleFormControlTextarea1">Dockerfile</label>
-        <textarea placeholder="{{ plh }}" class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
-    </div>
-    <form action="/upload" enctype=multipart/form-data method="POST">
-        <div class="form-group">
-          <label for="exampleFormControlFile1">Your Dockerfile</label>
-          <input name='file' type="file" class="form-control-file" id="exampleFormControlFile1">
-          <br/>
-          <input type="submit" value="Upload">
+    <form action="/build" method="POST">
+    <div class="input-group mb-3">
+        <input name='repo' type="text" class="form-control" placeholder="Use Git the web URL.">
+        <div class="input-group-append">
+          <button class="btn btn-success" type="submit">Clone&Build</button>
         </div>
-</form>
+      </div>
+    </form>
 </div>
+<br/>
+<div class="container">
+        <h4>Simple build your image!</h4>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="https://www.codecentric.de/files/2016/09/continuous_delivery_2-700x300.png" alt="Первый слайд">
+                    <div class="carousel-caption d-none d-md-block">
+                    <h3>First step</h3>
+                    <p>description</p>
+                    </div>
+                </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="https://www.codecentric.de/files/2016/09/continuous_delivery_2-700x300.png" alt="Второй слайд">
+                    <div class="carousel-caption d-none d-md-block">
+                            <h3>Second step</h3>
+                            <p>description</p>
+                            </div>
+                </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="https://www.codecentric.de/files/2016/09/continuous_delivery_2-700x300.png" alt="Третий слайд">
+                    <div class="carousel-caption d-none d-md-block">
+                            <h3>Third step</h3>
+                            <p>description</p>
+                            </div>
+                </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+
+</div>
+
 {% endblock %}
