--- a/webui/templates/images.html
+++ b/webui/templates/images.html
@@ -18,7 +18,7 @@
                   <a href="/images/remove/{{ img.short_id }}"><i class="fa fa-trash" aria-hidden="true"></i></a>
                 </td>
                 <td>{{ img.short_id }}</td>
-                <td>{{ img.tags }}</td>
+                <td>{{ img.tags[0] }}</td>
               </tr>
             {% endfor %}
             </tbody>
