--- a/webui/templates/base.html
+++ b/webui/templates/base.html
@@ -47,16 +47,16 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/">Dashboard <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/"><i class="fa fa-tachometer" aria-hidden="true"></i> Dashboard <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/networks">Network</a>
+              <a class="nav-link" href="/networks"><i class="fa fa-share-alt" aria-hidden="true"></i> Network</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/images">Images</a>
+              <a class="nav-link" href="/images"><i class="fa fa-picture-o" aria-hidden="true"></i> Images</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/dockerfile">Dockerfiles</a>
+              <a class="nav-link" href="/dockerfile"><i class="fa fa-building" aria-hidden="true"></i> Dockerbuilder</a>
             </li>
           </ul>
           {% if user %}
