--- a/webui/templates/dashboard.html
+++ b/webui/templates/dashboard.html
@@ -16,33 +16,36 @@
 <div class="container">
 <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item">
-      <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true"><i class="fa fa-bar-chart" aria-hidden="true"></i> Charts</a>
+      <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="false"><i class="fa fa-bar-chart" aria-hidden="true"></i> Charts</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false"><i class="fa fa-linode" aria-hidden="true"></i> Dock</a>
+      <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true"><i class="fa fa-linode" aria-hidden="true"></i> Dock</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false"><i class="fa fa-table" aria-hidden="true"></i> Table</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" id="logs-tab" data-toggle="tab" href="#logs" role="tab" aria-controls="logs" aria-selected="false"><i class="fa fa-history" aria-hidden="true"></i> History</a>
+      </li>
   </ul>
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
       <!-- Charts -->
-<div class="container">
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/highcharts-more.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    <div id="ram"></div>
-  </div>
+      <div class="container">
+          <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+          <script src="https://code.highcharts.com/highcharts.js"></script>
+          <script src="https://code.highcharts.com/highcharts-more.js"></script>
+          <script src="https://code.highcharts.com/modules/exporting.js"></script>
+          <div id="ram"></div>
+        </div>
     </div>
     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
         <div class="container">
             <h4 align='center'>Running containers</h4>
             <div class="row">
                 {% for c in containers %}
-                <div style="font-size: 14px;" class="col-sm-4">
-                    <div style="min-height: 200px;" class="card text-white bg-primary mb-3 col-12">
+                <div style="font-size: 14px;" class="col-sm-4 col-12 col-md-3">
+                    <div style="min-height: 200px; min-width: 170px; margin-left: 10px;" class="card text-white bg-primary">
                         <div class="card-header">{{ c.name }} | <a href="/kill/{{ c.short_id }}"><i style="color: #fff;" class="fa fa-power-off" aria-hidden="true"></i></a></div>
                         <div class="card-body">
                           <h4 style="font-size: 12px;" class="card-title">{{ c.image }}</h4>
@@ -91,7 +94,37 @@
                   </table>
         </div>
     </div>
-  </div>
+
+ <!-- Logs -->
+    <div class="tab-pane fade show active" id="logs" role="tabpanel" aria-labelledby="logs-tab">
+        <div class="container">
+            <br/>
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th>level</th>
+                    <th>message</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for line in logs %}
+                  <tr>
+                    {% if 'INFO' in line %}
+                    <td><span class="badge badge-warning">info</span></td>
+                    {% elif 'DEBUG' in line %}
+                    <td><span class="badge badge-primary">debug</span></td>
+                    {% else %}
+                    <td><span class="badge badge-danger">error</span></td>
+                    {% endif %}
+                    <td>{{ line }}</td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+          </div>
+      </div>
+<!-- END LOGS -->
+</div>
 
 
 
