--- a/webui/templates/dockerfile.html
+++ b/webui/templates/dockerfile.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
+
 <br/>
 <div class="container">
     <form action="/dockerfile" method="POST">
     <div class="input-group mb-3">
-        <input name='url' type="text" class="form-control" placeholder="Use Git the web URL.">
+        <input autofocus required name='url' type="text" class="form-control" placeholder="Use Git the web URL.">
         <div class="input-group-append">
           <button class="btn btn-success" type="submit">Clone&Build</button>
         </div>
@@ -12,47 +13,15 @@
     </form>
 </div>
 <br/>
-<div class="container">
-        <h4>Simple build your image!</h4>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img class="d-block w-100" src="https://www.codecentric.de/files/2016/09/continuous_delivery_2-700x300.png" alt="Первый слайд">
-                    <div class="carousel-caption d-none d-md-block">
-                    <h3>First step</h3>
-                    <p>description</p>
-                    </div>
-                </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="https://www.codecentric.de/files/2016/09/continuous_delivery_2-700x300.png" alt="Второй слайд">
-                    <div class="carousel-caption d-none d-md-block">
-                            <h3>Second step</h3>
-                            <p>description</p>
-                            </div>
-                </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="https://www.codecentric.de/files/2016/09/continuous_delivery_2-700x300.png" alt="Третий слайд">
-                    <div class="carousel-caption d-none d-md-block">
-                            <h3>Third step</h3>
-                            <p>description</p>
-                            </div>
-                </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div>
 
+<div class="container main">
+<ul class="list-group">
+    <li class="list-group-item"><h4><img width="12%" height="12%" src="https://zalinux.ru/wp-content/uploads/2017/04/docker.png"/> Simple build your Docker images!</h4></li>
+    <li class="list-group-item"><kbd>Copy your GIT repo link</kbd></li>
+    <li class="list-group-item"><kbd>Press Clone&Build button</kbd></li>
+    <li class="list-group-item"><kbd>Wait some time</kbd></li>
+    <li class="list-group-item"><kbd>Enter to Images and Run your images</kbd></li>
+  </ul>
 </div>
 
 {% endblock %}
