--- a/webui/templates/dashboard.html
+++ b/webui/templates/dashboard.html
@@ -5,6 +5,11 @@
 	height: 100px;
 	margin: 0 auto;
 }
+.table .thead-dark th{
+background-color: #398bb3;
+border-color: #398bb3;
+};
+
 </style>
 <br/>
 
